feat(InAppNotification): set responsive design for DataTemplate with buttons

--- a/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
@@ -35,6 +35,9 @@
         <SolidColorBrush x:Key="Brush-Blue-01"
                          Color="{StaticResource Blue-01}" />
 
+        <!-- Converters -->
+        <converters:BoolNegationConverter x:Key="BoolNegationConverter" />
+
         <!--  Styles  -->
         <Style TargetType="TextBlock">
             <Setter Property="Foreground" Value="{StaticResource Brush-Grey-01}" />
