--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/InAppNotification/InAppNotificationPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/InAppNotification/InAppNotificationPage.xaml
@@ -1,4 +1,5 @@
 ﻿<Page
+    x:Name="CurrentPage"
     x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.InAppNotificationPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -10,19 +11,65 @@
     <Page.Resources>
         <ResourceDictionary>
             <DataTemplate x:Key="InAppNotificationWithButtonsTemplate">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
-                        <ColumnDefinition Width="Auto" />
-                    </Grid.ColumnDefinitions>
+                <UserControl>
+                    <Grid DataContext="{Binding ElementName=CurrentPage}">
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup>
+                                <VisualState x:Name="NarrowState">
+                                    <VisualState.Setters>
+                                        <Setter Target="TextBlock.(Grid.RowSpan)" Value="1" />
+                                        <Setter Target="TextBlock.(Grid.ColumnSpan)" Value="2" />
 
-                    <TextBlock Text="Do you like it?" VerticalAlignment="Center" />
+                                        <Setter Target="ButtonsStackPanel.(Grid.Row)" Value="1" />
+                                        <Setter Target="ButtonsStackPanel.(Grid.RowSpan)" Value="1" />
+                                        <Setter Target="ButtonsStackPanel.(Grid.Column)" Value="0" />
+                                        <Setter Target="ButtonsStackPanel.(Grid.ColumnSpan)" Value="2" />
+                                        <Setter Target="ButtonsStackPanel.Orientation" Value="Vertical" />
+                                        <Setter Target="ButtonsStackPanel.Margin" Value="0 5 0 0" />
 
-                    <StackPanel Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">
-                        <Button Content="Yes" Width="150" Height="30" Click="YesButton_Click" />
-                        <Button Content="No" Width="150" Height="30" Margin="10 0 0 0" Click="NoButton_Click" />
-                    </StackPanel>
-                </Grid>
+                                        <Setter Target="YesButton.Width" Value="Auto" />
+                                        <Setter Target="YesButton.HorizontalAlignment" Value="Stretch" />
+
+                                        <Setter Target="NoButton.Width" Value="Auto" />
+                                        <Setter Target="NoButton.HorizontalAlignment" Value="Stretch" />
+                                        <Setter Target="NoButton.Margin" Value="0 5 0 0" />
+                                    </VisualState.Setters>
+                                    
+                                    <VisualState.StateTriggers>
+                                        <StateTrigger IsActive="{Binding IsRootGridActualWidthLargerThan700, Converter={StaticResource BoolNegationConverter}, Mode=OneWay}" />
+                                    </VisualState.StateTriggers>
+                                </VisualState>
+
+                                <VisualState x:Name="LargeState">
+                                    <VisualState.StateTriggers>
+                                        <StateTrigger IsActive="{Binding IsRootGridActualWidthLargerThan700, Mode=OneWay}" />
+                                    </VisualState.StateTriggers>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+
+                        <Grid x:Name="RootGrid" SizeChanged="RootGrid_SizeChanged">
+                            <Grid.RowDefinitions>
+                                <RowDefinition />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+                        
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+
+                            <TextBlock x:Name="TextBlock" Grid.RowSpan="2" 
+                                       Text="Do you like it?" VerticalAlignment="Center" />
+
+                            <StackPanel x:Name="ButtonsStackPanel" Grid.RowSpan="2" Grid.Column="1" 
+                                        Orientation="Horizontal" VerticalAlignment="Center">
+                                <Button x:Name="YesButton" Content="Yes" Width="150" Height="30" Click="YesButton_Click" />
+                                <Button x:Name="NoButton" Content="No" Width="150" Height="30" Margin="10 0 0 0" Click="NoButton_Click" />
+                            </StackPanel>
+                        </Grid>
+                    </Grid>
+                </UserControl>
             </DataTemplate>
         </ResourceDictionary>
     </Page.Resources>
