feat(InAppNotification): add ability to hide dismiss button

--- a/Microsoft.Toolkit.Uwp.UI.Controls/InAppNotification/InAppNotification.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/InAppNotification/InAppNotification.xaml
@@ -146,6 +146,7 @@
 
                             <Button x:Name="PART_DismissButton"
                                     Grid.Column="1" 
+                                    Visibility="{Binding ShowDismissButton, RelativeSource={RelativeSource Mode=TemplatedParent}, Converter={StaticResource BoolToVisibilityConverter}}"
                                     Margin="10 0 -10 0"
                                     FontSize="12"
                                     Style="{StaticResource DismissTextBlockButtonStyle}"
