--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/InAppNotification/InAppNotificationPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/InAppNotification/InAppNotificationPage.xaml
@@ -21,9 +21,9 @@
                         <ControlTemplate TargetType="ButtonBase">
                             <Grid Margin="{TemplateBinding Padding}" Background="{TemplateBinding Background}">
                                 <ContentPresenter x:Name="Text"
-                            Content="{TemplateBinding Content}"
-                            HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                            VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                                                  Content="{TemplateBinding Content}"
+                                                  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                                  VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
                                 <VisualStateManager.VisualStateGroups>
                                     <VisualStateGroup x:Name="CommonStates">
                                         <VisualState x:Name="Normal" />
@@ -213,6 +213,48 @@
                     </Grid>
                 </Grid>
             </ControlTemplate>
+
+            <Style x:Key="VisualStudioCodeNotificationButtonStyle" TargetType="ButtonBase">
+                <Setter Property="Background" Value="#0E639C" />
+                <Setter Property="Foreground" Value="White" />
+                <Setter Property="VerticalAlignment" Value="Stretch" />
+                <Setter Property="FontSize" Value="14" />
+                <Setter Property="Padding" Value="10 0" />
+                <Setter Property="Height" Value="35" />
+                <Setter Property="BorderThickness" Value="0" />
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="ButtonBase">
+                            <Grid x:Name="RootGrid" Padding="{TemplateBinding Padding}" Margin="{TemplateBinding Margin}" Background="{TemplateBinding Background}">
+                                <ContentPresenter Content="{TemplateBinding Content}"
+                                                  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                                  VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                                
+                                <VisualStateManager.VisualStateGroups>
+                                    <VisualStateGroup x:Name="CommonStates">
+                                        <VisualState x:Name="Normal" />
+                                        <VisualState x:Name="PointerOver">
+                                            <Storyboard>
+                                                <ObjectAnimationUsingKeyFrames Storyboard.TargetName="RootGrid" Storyboard.TargetProperty="Background">
+                                                    <DiscreteObjectKeyFrame KeyTime="0" Value="#1177BB" />
+                                                </ObjectAnimationUsingKeyFrames>
+                                            </Storyboard>
+                                        </VisualState>
+                                        <VisualState x:Name="Pressed">
+                                            <Storyboard>
+                                                <ObjectAnimationUsingKeyFrames Storyboard.TargetName="RootGrid" Storyboard.TargetProperty="Background">
+                                                    <DiscreteObjectKeyFrame KeyTime="0" Value="#1177BB" />
+                                                </ObjectAnimationUsingKeyFrames>
+                                            </Storyboard>
+                                        </VisualState>
+                                        <VisualState x:Name="Disabled" />
+                                    </VisualStateGroup>
+                                </VisualStateManager.VisualStateGroups>
+                            </Grid>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
         </ResourceDictionary>
     </Page.Resources>
 
@@ -238,6 +280,11 @@
                     Content="Show notification with Drop Shadow (based on default template)"
                     Click="ShowNotificationWithDropShadowButton_Click" />
 
+            <Button x:Name="ShowNotificationWithVSCodeTemplateButton" 
+                    Margin="5"
+                    Content="Show notification with Visual Studio Code template (info notification)"
+                    Click="ShowNotificationWithVSCodeTemplateButton_Click" />
+
             <Button x:Name="DismissNotificationButton" 
                     Margin="5"
                     Content="Dismiss"
@@ -246,5 +293,53 @@
 
         <controls:InAppNotification x:Name="ExampleInAppNotification" 
                                     Content="This is a test message." />
+
+        <controls:InAppNotification x:Name="ExampleVSCodeInAppNotification"
+                                    MinHeight="35"
+                                    Background="#333333"
+                                    Foreground="White"
+                                    FontSize="14"
+                                    Padding="0"
+                                    BorderThickness="0"
+                                    ShowDismissButton="False"
+                                    VerticalAlignment="Top"
+                                    RenderTransformOrigin="0.5,0">
+            <controls:InAppNotification.ContentTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+
+                        <Grid Margin="10 5" Height="20" Background="#007ACC">
+                            <TextBlock Text="info"
+                                       Padding="5 0"
+                                       FontWeight="Bold"
+                                       VerticalAlignment="Center"
+                                       Foreground="White" />
+                        </Grid>
+
+                        <TextBlock Grid.Column="1" 
+                                   VerticalAlignment="Center"
+                                   Text="This a test message."
+                                   TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" />
+
+                        <StackPanel Grid.Column="2" Orientation="Horizontal">
+                            <Button Content="Action 1" 
+                                    Click="Action1Button_Click"
+                                    Style="{StaticResource VisualStudioCodeNotificationButtonStyle}" />
+                            <Button Content="Action 2"
+                                    Click="Action2Button_Click"
+                                    Style="{StaticResource VisualStudioCodeNotificationButtonStyle}" />
+                            <Button Content="Close" 
+                                    Click="CloseButton_Click"
+                                    Style="{StaticResource VisualStudioCodeNotificationButtonStyle}" />
+                        </StackPanel>
+                    </Grid>
+                </DataTemplate>
+            </controls:InAppNotification.ContentTemplate>
+        </controls:InAppNotification>
     </Grid>
 </Page>
