--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Menu/MenuPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Menu/MenuPage.xaml
@@ -29,15 +29,8 @@
                        TooltipPlacement="{Binding TooltipPlacement.Value, Mode=TwoWay}">
 
             <controls:MenuItem Name="FileMenu"
-                               controls:Menu.InputGestureText="Alt+F">
-                <controls:MenuItem.Header>
-                    <StackPanel Orientation="Horizontal">
-                        <SymbolIcon Symbol="Document" />
-                        <TextBlock Margin="5,0,0,0"
-                                   Text="File" />
-                    </StackPanel>
-                </controls:MenuItem.Header>
-
+                               controls:Menu.InputGestureText="Alt+F"
+                               Header="^File">
                 <MenuFlyoutSubItem Text="New">
                     <MenuFlyoutItem controls:Menu.InputGestureText="Ctrl+Shift+N"
                                     Command="{StaticResource NewProject}"
